--- a/geo-filter-app/package.json
+++ b/geo-filter-app/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
+    "linqts": "^1.14.2",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
